force-app/main/default/objects/UserLogin_History__c/UserLogin_History__c.object-meta.xml
<CustomObject>
    <description>Need to create an object for mySales Users&apos; login info &amp; history</description>
    <label>UserLogin History</label>
    <nameField>
        <label>UserLogin History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserLogin History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>