force-app/main/default/objects/UserLogin_History__c/fields/CostCenter_L3__c.field-meta.xml
<CustomField>
    <fullName>CostCenter_L3__c</fullName>
    <label>Center L3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>