force-app/main/default/objects/UserLogin_History__c/fields/CostCenter_L4__c.field-meta.xml
<CustomField>
    <fullName>CostCenter_L4__c</fullName>
    <label>Center L4</label>
    <length>80</length>
    <type>Text</type>
</CustomField>