force-app/main/default/objects/UserLogin_History__c/fields/CostCenter_L5__c.field-meta.xml
<CustomField>
    <fullName>CostCenter_L5__c</fullName>
    <label>Center L5</label>
    <length>80</length>
    <type>Text</type>
</CustomField>