force-app/main/default/objects/UserLogin_History__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <formula>CASE(EpCompanyName__c , 
						&quot;SDS&quot;, &quot;KOR&quot;, 
						&quot;SDSA&quot;, &quot;USA&quot;,
						&quot;SDSC&quot;, &quot;CHN&quot;,
						&quot;SDSE&quot;, &quot;GBR&quot;,
						&quot;SDSAP&quot;, &quot;SGP&quot;,
						&quot;SDSI&quot;, &quot;IND&quot;,
						&quot;SDSV&quot;, &quot;VNM&quot;,
						&quot;SDSLA&quot;, &quot;BRA&quot;,
						&quot;PRK&quot;)</formula>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>