force-app/main/default/objects/UserLogin_History__c/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <formula>CASE(CountryCode__c, 
						&quot;KOR&quot;, &quot;South Korea&quot;, 
						&quot;USA&quot;, &quot;United States of America&quot;,
						&quot;CHN&quot;, &quot;China&quot;,
						&quot;GBR&quot;, &quot;United Kingdom&quot;,
						&quot;IND&quot;, &quot;India&quot;,
						&quot;VNM&quot;, &quot;Vietnam&quot;,
						&quot;BRA&quot;, &quot;Brazil&quot;,
					&quot;SGP&quot;, &quot;Singapore&quot;,
						&quot;&quot;)</formula>
    <label>Country Name</label>
    <type>Text</type>
</CustomField>