force-app/main/default/objects/UserLogin_History__c/fields/DivisionName__c.field-meta.xml
<CustomField>
    <fullName>DivisionName__c</fullName>
    <label>Div Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>