force-app/main/default/objects/UserLogin_History__c/fields/EpCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>EpCompanyCode__c</fullName>
    <label>Ep Company Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>