force-app/main/default/objects/UserLogin_History__c/fields/EpCompanyName__c.field-meta.xml
<CustomField>
    <fullName>EpCompanyName__c</fullName>
    <label>Ep Company Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>