force-app/main/default/objects/UserLogin_History__c/fields/Id_Username__c.field-meta.xml
<CustomField>
    <fullName>Id_Username__c</fullName>
    <label>ID User Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>