force-app/main/default/objects/UserLogin_History__c/fields/Position_JikChakNM__c.field-meta.xml
<CustomField>
    <fullName>Position_JikChakNM__c</fullName>
    <label>Position JikChak</label>
    <length>80</length>
    <type>Text</type>
</CustomField>