force-app/main/default/objects/UserLogin_History__c/fields/Title_JikGiubNM__c.field-meta.xml
<CustomField>
    <fullName>Title_JikGiubNM__c</fullName>
    <label>Title JikGiub</label>
    <length>80</length>
    <type>Text</type>
</CustomField>