force-app/main/default/objects/UserLogin_History__c/fields/User_login_Month__c.field-meta.xml
<CustomField>
    <fullName>User_login_Month__c</fullName>
    <label>Login Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>