force-app/main/default/objects/UserLogin_History__c/fields/UserCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>UserCompanyCode__c</fullName>
    <label>Company Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>