force-app/main/default/objects/UserLogin_History__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>User Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>